--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">TileTraveler</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="stage1">Stage 1</string>
+    <string name="stage_select">Stage Select</string>
+    <string name="stage2">Stage 2</string>
+    <string name="stage3">Stage 3</string>
+    <string name="reset">Reset</string>
 
 </resources>
