--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="stage2">Stage 2</string>
     <string name="stage3">Stage 3</string>
     <string name="reset">Reset</string>
+    <string name="stage4">Stage 4</string>
 
 </resources>
