--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="stage3">Stage 3</string>
     <string name="reset">Reset</string>
     <string name="stage4">Stage 4</string>
+    <string name="stage5">Stage 5</string>
+    <string name="stage6">Stage 6</string>
 
 </resources>
