STAGE EEEEEIIIIIGHT OMGOMGOMG
MUCH TILE

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="stage5">Stage 5</string>
     <string name="stage6">Stage 6</string>
     <string name="stage7">Stage 7</string>
+    <string name="stage8">Stage 8</string>
 
 </resources>
